Update Blog “2017-05-31-new-image”

--- a/site/content/post/2017-05-31-new-image.md
+++ b/site/content/post/2017-05-31-new-image.md
@@ -2,9 +2,9 @@
 layout: blog
 title: new image
 date: 2017-05-31T19:36:14.685Z
-thumbnail: /site/static/images/uploads/images.jpeg
+thumbnail: /images/uploads/images.jpeg
 rating: '1'
 ---
-new room ideas - testing image upload from netlifycms
+new room ideas - testing image upload from Netlify cms
 
-![room2](/site/static/images/uploads/chandelier-glass-covering-interior-small-living-room-storage-ideas-brown-soft-glossy-button.jpg)
+![room3](/images/uploads/chandelier-glass-covering-interior-small-living-room-storage-ideas-brown-soft-glossy-button.jpg)
